# Chatbot_llama3

./: README.md  pyproject.toml  requirements.txt
chatbot/: localama.py
